fix: overflow-x

--- a/3-Portfolio/portfolio/src/Components/NavBar/navbar.css
+++ b/3-Portfolio/portfolio/src/Components/NavBar/navbar.css
@@ -65,6 +65,7 @@ ol > li {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        overflow-x: hidden;
     }
 
     .nav-links{
