--- a/3-Portfolio/portfolio/src/Components/SectionTwo/sectiontwo.css
+++ b/3-Portfolio/portfolio/src/Components/SectionTwo/sectiontwo.css
@@ -1,6 +1,7 @@
 .sectiontwo{
     background-color: var(--background-color);
     padding: 50px 200px;
+    overflow-x: hidden;
 }
 
 .sectiontwo > h2{
